マップ生成を追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>ログホラTRPG ココフォリア出力</h1>
+      <h2>ログホラTRPG ココフォリア出力</h2>
 
       <form id="input-form">
         <div>
@@ -26,6 +26,26 @@
         <label for="output">ココフォリア用コマデータ</label>
         <textarea id="output" rows="10" readonly></textarea>
       </div>
+
+      <hr class="separator" />
+
+      <h2>マップ生成ツール</h2>
+      <div>
+        <input
+          type="number"
+          id="map-size"
+          value="8"
+          placeholder="マップサイズ"
+        />
+        <input type="color" id="map-color" value="#30ac49" />
+        <label for="map-grid">グリッド線</label>
+        <input type="checkbox" id="map-grid" checked />
+        <label for="map-crosshair">クロスヘア</label>
+        <input type="checkbox" id="map-crosshair" checked />
+        <button id="generate-map">マップ生成</button>
+      </div>
+
+      <canvas id="map-output"></canvas>
     </main>
     <script src="main.ts"></script>
   </body>
